fixed school logo on mobile device

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -12,7 +12,7 @@ padding: 200px 40px 0 40px;
 }
 
 .PictureBox{
-background-color: rgb(36, 34, 34);
+  background-color: rgb(36, 34, 34);
   grid-column: 1 / 2;
   height: 600px;
   overflow: hidden;
@@ -85,12 +85,21 @@ width: 85%;
   grid-column: 1 / 3;
   text-align: center;
   height: 300px;
+  padding-top: 0;
+  }
+
+  .PictureBox2 .imageSchool {
+    margin-left: auto;
+  margin-right: auto;
+  margin-top: 15%;
+  display: block;
   }
   
 .PresentationBox2 {
   grid-auto-columns: auto;
   grid-row: 4;
   grid-column: 1 / 3;
+
   }
   
 .imageSchool {
@@ -100,7 +109,6 @@ width: 85%;
   #presentationText{
     font-family: 'Lato', sans-serif;
     font-size: 17px;
-    color: white;
     padding: 60px 40px 60px 40px;
   }
 
